// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataBar /> LargeValue story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      aria-label="data-bar"
      class="data-bar"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 96%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> NoSegments story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      aria-label="data-bar"
      class="data-bar"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
      >
        <div
          class="data-bar-segment data-bar-segment--brand"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> SmallValue story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      aria-label="data-bar"
      class="data-bar"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 5%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> TotalsLessThanMax story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      aria-label="data-bar"
      class="data-bar"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 25%;"
          tabindex="0"
        />
        <div
          aria-label="Segment 2"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 10%;"
          tabindex="-1"
        />
        <div
          aria-label="Segment 3"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 15%;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> TotalsMax story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      aria-label="data-bar"
      class="data-bar"
    >
      <div
        class="data-bar__segment-space"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 50%;"
          tabindex="0"
        />
        <div
          aria-label="Segment 2"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 20%;"
          tabindex="-1"
        />
        <div
          aria-label="Segment 3"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable data-bar-segment--round-right"
          style="width: 30%;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> TotalsMoreThanMax story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      aria-label="data-bar"
      class="data-bar"
    >
      <div
        class="data-bar__segment-space"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable data-bar-segment--round-right"
          style="width: 100%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> TotalsRightUnderMax story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      aria-label="data-bar"
      class="data-bar"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 49.01960784313725%;"
          tabindex="0"
        />
        <div
          aria-label="Segment 2"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 19.607843137254903%;"
          tabindex="-1"
        />
        <div
          aria-label="Segment 3"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          style="width: 29.411764705882355%;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;
